# trip_planner_backend

./: .env.example  README.md  pyproject.toml  secrets.yaml  start_server.sh
deploy/: api.py
deploy/models/: api.py
src/trip_planner/: crew.py  flights_crew.py  flow.py  hotels_crew.py  itinerary_crew.py  main.py  preliminary_variations_crew.py
src/trip_planner/config/: agents.yaml  agents_prompts.yaml  tasks.yaml
src/trip_planner/models/: flights.py  general.py  hotels.py  itinerary.py
src/trip_planner/prompts/: planning_team.py
src/trip_planner/tools/: flights.py  generate_image.py  internet_search.py
src/trip_planner/tools/agno/: flights.py
