[project]
name = "trip_planner"
version = "0.1.0"
description = "Trip Planner using crewAI"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai==0.85.0",
    "crewai-tools==0.14.0",
    "setuptools==80.9.0",
    "arize-phoenix-otel==0.12.1",
    "openinference-instrumentation-crewai==0.1.10",
    "google-search-results==2.4.2",
    "fastapi==0.115.14",
    "agno>=1.7.1",
    "groq>=0.29.0",
    "arize-otel>=0.8.2",
    "openinference-instrumentation-agno>=0.1.8",
    "mcp>=1.10.1",
    "duckduckgo-search>=8.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
]

